v1.2: 
update Start screen + End screen